# zooming-kittens

./: .tool-versions  ARCHITECTURE.md  Cargo.toml  HOOK_ARCHITECTURE.md  config.example.toml  journal.sh  package.json  run.sh
.beads/: issues.jsonl
doc/: PLAN-registry.md  PLAN-stream.md  PLAN-windowfocus.md
examples/: list_windows.rs  listen_events.rs  poll_windows.rs
kitty-focus-tracker/: README.md
kitty-focus-tracker/src/: main.rs
src/: config.rs  kfont.rs  main.rs  registry.rs
src/commands/: conf_size.rs  fonts.rs  mod.rs  systemd.rs  zoomer.rs
src/kitty/: conf_parser.rs  mod.rs  process.rs  registry.rs  resizer.rs  types.rs  util.rs
src/niri/: mod.rs  registry.rs  types.rs
